--- a/Dockerfile.assisted-service-rhel9-mce
+++ b/Dockerfile.assisted-service-rhel9-mce
@@ -11,8 +11,10 @@ COPY --chown=${USER_UID} . /app
 WORKDIR /app
 
 USER 0
+# Exclude i686 packages to prevent glibc multilib dependency resolution issues
+# where dnf tries to resolve i686 glibc-common that isn't available in UBI repos
 RUN INSTALL_PKGS="gcc git nmstate-devel openssl-devel" && \
-    dnf install -y $INSTALL_PKGS && \
+    dnf install -y --exclude='*.i686' $INSTALL_PKGS && \
     dnf clean all
 USER ${USER_UID}
 
