MGMT-22909: Fix glibc dependency CI failures in UBI9/RHEL9 builds
Additional changes:
- Fix CI failures (unknown)

--- a/ci-images/Dockerfile.base
+++ b/ci-images/Dockerfile.base
@@ -4,6 +4,7 @@ RUN go install gotest.tools/gotestsum@v1.12.3
 
 FROM quay.io/centos/centos:stream9
 
+# Upgrade base packages first to ensure glibc version matches glibc-devel requirements
 # Exclude i686 packages to avoid glibc-devel multilib dependency issues
 RUN dnf upgrade -y && dnf install --enablerepo=crb --setopt=multilib_policy=best --exclude='*.i686' -y \
     git unzip make gcc which nmstate-devel python3 openssl-devel && \
