--- a/Dockerfile.assisted-service
+++ b/Dockerfile.assisted-service
@@ -11,8 +11,10 @@ RUN ${HOME}/go/bin/go-licenses save --save_path /tmp/licenses ./...
 FROM registry.access.redhat.com/ubi9/ubi:latest@sha256:3816d303e75dec4da2d10eeb9e8651eef4393721598bea4690c607282635aa57 as builder
 
 # Build requirements
+# Upgrade base packages first to ensure glibc version matches glibc-devel requirements
 # Exclude i686 packages to avoid glibc-devel multilib dependency issues in UBI9
-RUN dnf install -y --setopt=multilib_policy=best --exclude='*.i686' gcc git nmstate-devel openssl-devel && \
+RUN dnf upgrade -y && \
+    dnf install -y --setopt=multilib_policy=best --exclude='*.i686' gcc git nmstate-devel openssl-devel && \
     dnf clean all
 
 ENV GOROOT=/usr/lib/golang
