--- a/Dockerfile.assisted-service-build
+++ b/Dockerfile.assisted-service-build
@@ -37,8 +37,10 @@ COPY --from=quay.io/openshift/origin-cli:latest /usr/bin/oc /usr/bin
 COPY --from=quay.io/operator-framework/upstream-opm-builder:v1.16.1 /bin/opm /bin
 COPY --from=registry.k8s.io/kustomize/kustomize:v5.7.1 /app/kustomize /usr/bin/
 
+# Upgrade base packages first to ensure glibc version matches glibc-devel requirements
 # Exclude i686 packages to avoid glibc-devel multilib dependency issues
-RUN dnf install -y --enablerepo=crb --setopt=multilib_policy=best --exclude='*.i686' \
+RUN dnf upgrade -y && \
+    dnf install -y --enablerepo=crb --setopt=multilib_policy=best --exclude='*.i686' \
         openssl openssl-devel postgresql nmstate-devel sqlite gcc genisoimage git libvirt-client libvirt-devel java make && \
     dnf clean all
 
