--- a/Dockerfile.assisted-service-rhel9-mce
+++ b/Dockerfile.assisted-service-rhel9-mce
@@ -11,8 +11,10 @@ COPY --chown=${USER_UID} . /app
 WORKDIR /app
 
 USER 0
+# Upgrade base packages first to ensure glibc version matches glibc-devel requirements
 # Exclude i686 packages to avoid glibc-devel multilib dependency issues in UBI9
 RUN INSTALL_PKGS="gcc git nmstate-devel openssl-devel" && \
+    dnf upgrade -y && \
     dnf install -y --setopt=multilib_policy=best --exclude='*.i686' $INSTALL_PKGS && \
     dnf clean all
 USER ${USER_UID}
